--- a/style/normalize.css
+++ b/style/normalize.css
@@ -44,16 +44,6 @@ main {
   display: block;
 }
 
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
 /* Grouping content
    ========================================================================== */
 
@@ -222,6 +212,9 @@ button {
   line-height: inherit;
   color: inherit;
   cursor: pointer;
+  box-flex-group: inherit;
+  background-color: transparent;
+  border: none;
 }
 
 /**
