--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,147 @@
+@font-face {
+  font-family: "Ondo";
+  src: url(../fonts/Ondo.ttf);
+  font-weight: 800;
+  font-style: normal;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  color: #fff;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  background-color: #2D1E6B;
+}
+
+h1 {
+  font-family: "Ondo", sans-serif;
+  color: #FFF;
+  font-size: 68.937px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 110.6%;
+  letter-spacing: 2.757px;
+  text-transform: uppercase;
+}
+
 .container {
   max-width: 1240px;
   margin: 0 auto;
+}
+
+.header__wrapper {
+  padding: 53px 0 125px;
+}
+
+.nav-bar {
+  display: flex;
+  align-items: center;
+  gap: 213px;
+}
+
+.nav-bar__logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7px;
+}
+
+.nav-bar__logo-text {
+  font-family: "Ondo";
+  font-size: 31px;
+  font-weight: 800;
+}
+
+.nav-bar__menu-list {
+  display: flex;
+  gap: 40px;
+  text-transform: uppercase;
+}
+
+.active-menu {
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 110.6%; /* 19.908px */
+  letter-spacing: 0.72px;
+  text-transform: uppercase;
+}
+
+.nav-bar__bag-btn {
+  border: none;
+}
+
+.basic {
+  /* background: url(../assets/basic-bg.png); */
+}
+
+.basic__title {
+  max-width: 578px;
+  padding-bottom: 10px;
+}
+
+.transparent_text {
+  background: url(../assets/basic_explore.png) center;
+  -webkit-background-clip: text; /* Веб-браузеры, использующие WebKit */
+  background-clip: text; /* Обрезаем фон по тексту */
+  color: transparent;
+}
+
+.basic__text {
+  max-width: 606px;
+  font-size: 18.715px;
+  font-weight: 400;
+  line-height: 185.1%; /* 34.642px */
+  letter-spacing: 0.749px;
+  padding-bottom: 33px;
+}
+
+.basic__buttons {
+  padding-bottom: 66px;
+}
+
+.basic__btn {
+ padding: 26px 64px;
+ font-family: Ondo;
+ font-size: 20px;
+ font-style: normal;
+ font-weight: 800;
+ line-height: 110.6%; /* 22.12px */
+ letter-spacing: 0.8px;
+ text-transform: uppercase;
+ background: url(../assets/btn_bg.svg) no-repeat;
+ clip-path: polygon();
+}
+
+.basic__statistics {
+  display: flex;
+  align-items: center;
+  gap: 31px;
+}
+
+.basic__cont-stats {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.basic__stat {
+  font-family: Ondo;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 800;
+  line-height: 110.6%;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+}
+
+.basic__signature {
+  font-family: Lato;
+  font-size: 18.715px;
+  line-height: 185.1%;
+  letter-spacing: 0.749px;
+  text-transform: capitalize;
 }
